Preventing plan border from being visible on ios

--- a/frontend/components/premium/Premium.module.scss
+++ b/frontend/components/premium/Premium.module.scss
@@ -35,7 +35,7 @@
             font-weight: 700;
             font-size: 10px;
             position: absolute;
-            bottom: 100%;
+            bottom: calc(100% - 1px);
             padding: 5px 7px;
             background-color: var(--background-secondary);
             border: 1px solid var(--color-primary);
